# hive

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh  hive_weights.json  main.cpp  test
data/: sine.csv  sine.py
include/: allocation.h  broadcasting.h  buffer.h  buffer_ops.h  client.h  constants.h  dtypes.h  generation_utils.h  grad.h  graph.h  iterators.h  kernel.h  logging.h  messaging.h  metrics.h  nn_parser.h  node.h  ops.h  server.h  string_utils.h
include/data/: csv.h
nn/: another_llm.nn  binary.nn  function.nn  grad.nn  llm.nn  mlp.nn
nn/tests/: add.nn  conv2d.nn  dense.nn  divide.nn  multiply.nn  sqrt.nn
src/: allocation.cpp  allocator.cpp  broadcasting.cpp  buffer.cpp  buffer_ops.cpp  client.cpp  generation_utils.cpp  grad.cpp  graph.cpp  iterators.cpp  kernel.cpp  llm.nn  logging.cpp  messaging.cpp  metrics.cpp  nn_parser.cpp  node.cpp  ops.cpp  server.cpp  string_utils.cpp
src/data/: csv.cpp
src/ops/: matmul.cpp  op.cpp  tensor.cpp
tests/: messaging.test.cpp
